--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -4,11 +4,12 @@
    <%= fields_for :user, @student.user do |p| %>
        <%= p.text_field :first_name, placeholder: "Enter First Name" %>
        <%= p.text_field :last_name, placeholder: "Enter Last Name" %>
-       <%= date_field(:profile, :birthdate) %>
-       <%= p.text_field :email, placeholder: "Enter Email" %>
+       <%= p.select :gender, User.gender %>
        <%= p.text_field :photo_url, placeholder: "Enter Photo URL" %>
-       <%= p.text_field :password, placeholder: "Enter Temp Password" %>
+       <%= p.text_field :username, placeholder: "Enter Username" %>
+       <%= p.text_field :email, placeholder: "Enter Email" %>
+       <%= p.text_field :password, placeholder: "Enter Password" %>
+       <%= p.select :house, User.house %>
    <% end %>
-   <%= f.text_field :background, placeholder: "Enter Background" %>
    <%= f.button :submit %>
 <% end %>
