added create student feature

--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -13,11 +13,11 @@ table, th, td {
 </style>
 <table>
         <tr>
-            <th> Name</th>
-            <th> Email</th>
-            <th> Username</th>
-            <th> Password</th>
-            <th> House</th>
+            <th> Name: </th>
+            <th> Email:</th>
+            <th> Username:</th>
+            <th> Password:</th>
+            <th> House:</th>
         </tr>
 
         <tr>
