added 'create new' links to index

--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -28,3 +28,5 @@ table, th, td {
             <td> <%= @student.user.house.name %> </td>
         </tr>
     </table>
+
+    <p> <%= link_to 'Back To Students', index_student_path %> </p>
