updated link_to paths

--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -29,4 +29,4 @@ table, th, td {
         </tr>
     </table>
 
-    <p> <%= link_to 'Back To Students', index_student_path %> </p>
+<%= link_to 'Back To Students', students_path %>
