--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -12,6 +12,11 @@ table, th, td {
 
 </style>
 
+<p> <%= link_to 'Students', students_path %> </p>
+    <p> <%= link_to 'Instructors', new_instructor_path %> </p>
+    <p> <%= link_to 'Courses', new_course_path %> </p>
+    <p> <%= link_to 'Enrollments', new_enrollment_path %> </p>
+
 <h1>Users</h1>
 <table style="width:100%">
         <tr>
