--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,20 +1,22 @@
 <table style="width:100%">
         <tr>
-            <th> student ID</th>
+            <th> Student ID</th>
             <th> Name</th>
             <th> Email</th>
             <th> Username</th>
             <th> Password</th>
-            <th> House</th>
+           
         </tr>
 
 <% @students.each do |single_student| %>
         <tr>
             <td> <%= single_student.id %> </td>
-            <td>  <%= single_student.user.first_name %> <%= single_student.user.last_name %> </td>
+            <td> <%= link_to single_student.user.full_name, {:action => 'show', :id => single_student.id} -%> </td>
             <td> <%= single_student.user.email %></td>
             <td> <%= single_student.user.username %> </td>
             <td> <%= single_student.user.password %></td>
         </tr>
         <% end %>
     </table>
+
+   
