--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,11 +1,11 @@
 <h1>Create New Student</h1>
 
-<%= form_for @student do |f|%>
+<%= form_for @student, html: {multipart: true} do |f|%>
    <%= fields_for :user, @student.user do |p| %>
        <%= p.text_field :first_name, placeholder: "Enter First Name" %>
        <%= p.text_field :last_name, placeholder: "Enter Last Name" %>
        <%= p.select :gender, User.gender %>
-       <%= p.text_field :photo, placeholder: "Enter Photo URL" %>
+       <%= p.file_field :photo %>
        <%= p.text_field :username, placeholder: "Enter Username" %>
        <%= p.text_field :email, placeholder: "Enter Email" %>
        <%= p.text_field :password, placeholder: "Enter Password" %>
