--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,5 +1,5 @@
 
-
+<%= link_to 'Back To Students', students_path %>
      
 <h2><%= @student.user.first_name %> <%= @student.user.last_name %></h2>
 
@@ -14,6 +14,13 @@
 <h3> Email: <%= @student.user.email %> </h3>
           
             
-       
+ <div>
+    <h2>Current Courses:</h2>
 
-<%= link_to 'Back To Students', students_path %>
+    <% @student.user.enrollments.each do |single_course| %>
+
+        <%= single_course.course_id %>
+        <%= single_course.course.name %>
+    <% end %>
+ </div>
+
