fixed bootstrap rendering bug

--- a/app/assets/stylesheets/_bootstrap-custom.scss
+++ b/app/assets/stylesheets/_bootstrap-custom.scss
@@ -1,35 +1,35 @@
-@import "bootstrap-custom/functions";
-@import "bootstrap-custom/variables";
-@import "bootstrap-custom/mixins";
-@import "bootstrap-custom/root";
-@import "bootstrap-custom/reboot";
-@import "bootstrap-custom/type";
-@import "bootstrap-custom/images";
-@import "bootstrap-custom/code";
-@import "bootstrap-custom/grid";
-@import "bootstrap-custom/tables";
-@import "bootstrap-custom/forms";
-@import "bootstrap-custom/buttons";
-@import "bootstrap-custom/transitions";
-@import "bootstrap-custom/dropdown";
-@import "bootstrap-custom/button-group";
-@import "bootstrap-custom/input-group";
-@import "bootstrap-custom/custom-forms";
-@import "bootstrap-custom/nav";
-@import "bootstrap-custom/navbar";
-@import "bootstrap-custom/card";
-@import "bootstrap-custom/breadcrumb";
-@import "bootstrap-custom/pagination";
-@import "bootstrap-custom/badge";
-@import "bootstrap-custom/jumbotron";
-@import "bootstrap-custom/alert";
-@import "bootstrap-custom/progress";
-@import "bootstrap-custom/media";
-@import "bootstrap-custom/list-group";
-@import "bootstrap-custom/close";
-@import "bootstrap-custom/modal";
-@import "bootstrap-custom/tooltip";
-@import "bootstrap-custom/popover";
-@import "bootstrap-custom/carousel";
-@import "bootstrap-custom/utilities";
-@import "bootstrap-custom/print";
+@import "bootstrap/functions";
+@import "bootstrap/variables";
+@import "bootstrap/mixins";
+@import "bootstrap/root";
+@import "bootstrap/reboot";
+@import "bootstrap/type";
+@import "bootstrap/images";
+@import "bootstrap/code";
+@import "bootstrap/grid";
+@import "bootstrap/tables";
+@import "bootstrap/forms";
+@import "bootstrap/buttons";
+@import "bootstrap/transitions";
+@import "bootstrap/dropdown";
+@import "bootstrap/button-group";
+@import "bootstrap/input-group";
+@import "bootstrap/custom-forms";
+@import "bootstrap/nav";
+@import "bootstrap/navbar";
+@import "bootstrap/card";
+@import "bootstrap/breadcrumb";
+@import "bootstrap/pagination";
+@import "bootstrap/badge";
+@import "bootstrap/jumbotron";
+@import "bootstrap/alert";
+@import "bootstrap/progress";
+@import "bootstrap/media";
+@import "bootstrap/list-group";
+@import "bootstrap/close";
+@import "bootstrap/modal";
+@import "bootstrap/tooltip";
+@import "bootstrap/popover";
+@import "bootstrap/carousel";
+@import "bootstrap/utilities";
+@import "bootstrap/print";
