--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,40 +12,41 @@
 
 <body id="bootstrap-override">
 
+<div class="container-fluid">
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="navbar-brand header">WESTEROS ACADEMY</div>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="navbar-brand header">WESTEROS ACADEMY</div>
 
-  <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-      <li class="nav-item active">
-      <%= link_to 'Dashboard', users_path %> <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <%= link_to 'Students', students_path %>
-      </li>
-      <li class="nav-item">
-        <%= link_to 'Instructors', instructors_path %>
-      </li>
-      <li class="nav-item">
-        <%= link_to 'Courses', courses_path %>
-      </li>
-      <li class="nav-item">
-        <%= link_to 'Houses', houses_path %>
-      </li>
-    </ul>
-    
-    </form>
-  </div>
-</nav>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        <li class="nav-item active">
+        <%= link_to 'Dashboard', users_path %> <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'Students', students_path %>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'Instructors', instructors_path %>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'Courses', courses_path %>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'Houses', houses_path %>
+        </li>
+      </ul>
+      
+      </form>
+    </div>
+  </nav>
 
 
-                    <%= yield %>
+                      <%= yield %>
 
-     
+  </div>      
 </body>
 </html>
 
