--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,7 +24,7 @@ html {
     }
 
     #bootstrap-override .container-fluid{
-       
+      
         
         .action {
             display: flex;
@@ -42,12 +42,20 @@ html {
                 font-size: 3em;
                 
             }
-           
-           
         }
-        
+    }
+
+    table {
+        border-collapse: collapse;
+        width: 1000%;
     }
     
+    table, th, td {
+        margin-top: 30px;
+        border: 1px solid $light-grey;
+        color: $light-grey;
+        background-color: $charleston-green;
+    }
 }
 
 
