--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,16 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-<style>
-table {
-    border-collapse: collapse;
-}
 
-table, th, td {
-    border: 1px solid black;
-}
-
-</style>
 
 <div class="container-fluid">
 
@@ -40,7 +28,8 @@ table, th, td {
       <%= link_to 'Enrollment', enrollments_path %>
   </div>
 </div>   
-                <h1>Users</h1>
+
+<h1>Users</h1>
                 <table style="width:80%">
                         <tr>
                             <th> User ID</th>
@@ -55,7 +44,7 @@ table, th, td {
                 <% @users.each do |single_user| %>
                         <tr>
                             <td> <%= single_user.id %> </td>
-                            <td>  <%= single_user.first_name %> <%= single_user.last_name %> </td>
+                            <td>  <%= single_user.full_name %> </td>
                             <td> <%= single_user.email %></td>
                             <td> <%= single_user.userable_type %></td>
                             <td> <%= single_user.username %> </td>
@@ -64,10 +53,11 @@ table, th, td {
                         </tr>
                     <% end %>
                 </table>
-                
+              
                    
                     <div> <%= link_to 'Add New Instructor', new_instructor_path %> </div>
                     <div> <%= link_to 'Add New Course', new_course_path %> </div>
                     <div> <%= link_to 'Add New Enrollment', new_enrollment_path %> </div>
                 
 
+                 
