--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,6 +7,7 @@ html {
     padding: 20px;
     background: asset-url("stark_bg.jpg")  no-repeat center center fixed;
     background-size: 100%;
+    background-color: $smokey-black;
 
 
     #bootstrap-override{
@@ -24,7 +25,7 @@ html {
     }
 
     #bootstrap-override .container-fluid{
-      
+
         
         .action {
             display: flex;
@@ -39,9 +40,21 @@ html {
 
             a {
                 color: $light-grey;
-                font-size: 3em;
+                font-size: 3rem;
                 
             }
+        }
+
+        .small-action{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: $black-coral;
+            margin-top: 100px;
+            width: 50%;
+            height: 50px;
+            border: 2px solid $light-grey;
+            border-radius: 25px;
         }
     }
 
