--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,18 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
-<style>
-table {
-    border-collapse: collapse;
-}
+<div class="container-fluid">
+    <div class="options">
 
-table, th, td {
-    border: 1px solid black;
-}
-
-</style>
-
-<div> <%= link_to 'Add New Student', new_student_path %> </div>
+        <div class="small-action"> 
+            <%= link_to 'Add New Student', new_student_path %> 
+        </div>
+    </div>
 
 <table style="width:100%">
         <tr>
