--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,15 +1,40 @@
-<h1>Create New Student</h1>
+<div class="container-fluid">
+    <div class="edit-wrapper">
 
-<%= form_for @student, html: {multipart: true} do |f|%>
-   <%= fields_for :user, @student.user do |p| %>
-       <%= p.text_field :first_name, placeholder: "Enter First Name" %>
-       <%= p.text_field :last_name, placeholder: "Enter Last Name" %>
-       <%= p.select :gender, User.gender %>
-       <%= p.file_field :photo %>
-       <%= p.text_field :username, placeholder: "Enter Username" %>
-       <%= p.text_field :email, placeholder: "Enter Email" %>
-       <%= p.text_field :password, placeholder: "Enter Password" %>
-       <%= p.select :house_id, House.all.map{|x|[x.name, x.id]} %>
-   <% end %>
-   <%= f.button :submit %>
-<% end %>
+        <h1>Create New Student</h1>
+
+        <%= form_for @student, html: {multipart: true} do |f|%>
+        <%= fields_for :user, @student.user do |p| %>
+            <div class="form-group"> 
+                <label for="firstName">First Name:</label>
+                <%= p.text_field :first_name %>
+            </div>
+            <div class="form-group">
+                <label for="lastName">Last Name:</label> 
+                <%= p.text_field :last_name %>
+            </div>
+            <div class="form-group"> 
+                <label for="gender">Gender:</label> 
+                <%= p.select :gender, User.gender %> 
+            </div>
+            <div class="form-group"> 
+                <label for="house">House:</label> 
+                <%= p.select :house_id, House.all.map{|x|[x.name, x.id]} %>
+            </div>
+            <div class="form-group">
+                <label for="username">Username:</label> 
+                <%= p.text_field :username %>
+            </div>
+            <div class="form-group">
+                <label for="email">Email:</label>
+                <%= p.text_field :email %>
+            </div>
+            <div class="form-group">
+                <label for="password">Pssword:</label>
+                <%= p.text_field :password %>
+            </div>
+        <% end %>
+        <div> <%= f.button :submit %> </div>
+        <% end %>
+    </div>
+</div>
