--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -18,10 +18,10 @@
 <% @students.each do |single_student| %>
         <tr>
             <td> <%= single_student.id %> </td>
-            <td> <%= link_to single_student.user.full_name, {:action => 'show', :id => single_student.id} -%> </td>
+            <td> <%= link_to single_student.user.full_name, {:action => 'show', :id => single_student.id} %> </td>
             <td> <%= single_student.user.email %></td>
             <td> <%= link_to 'Edit', edit_student_path(single_student.id) %> </td>
-            <td> <%= link_to 'Delete', single_student, method: :delete, data: { confirm: 'Are you sure?' } %> </td>
+            <td> <%= link_to 'Delete', single_student, method: :delete, remote:true, data: { confirm: 'Are you sure?' } %> </td>
             
         </tr>
         <% end %>
