--- a/app/views/enrollments/show.html.erb
+++ b/app/views/enrollments/show.html.erb
@@ -1,5 +1,18 @@
-<div class="course-card">
-    <p><strong>Name:</strong> <%= @enrollment.user.first_name %> <%= @enrollment.user.last_name %> </p>
-    <p><strong>Type:</strong> <%= @enrollment.user.userable_type %></p>
-    <p><strong>Course:</strong> <%= @enrollment.course.name %></p>
+<div class="container-fluid">
+    <div class="options">
+        <div class="small-action">
+            <%= link_to 'Enroll New Student', new_student_path %>
+        </div>
+        
+        <div class="small-action">
+            <%= link_to 'Enroll New Student', new_instructor_path %> 
+        </div>
+    </div>
+
+    <div class="show-wrapper">
+        <p><strong>Name:</strong> <%= @enrollment.user.first_name %> <%= @enrollment.user.last_name %> </p>
+        <p><strong>Type:</strong> <%= @enrollment.user.userable_type %></p>
+        <p><strong>Course:</strong> <%= @enrollment.course.name %></p>
+    </div>
+
 </div>
