--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,7 @@ html {
         a {
             color: $light-grey;
             margin: 5px;
+            
         }
     }
 
@@ -61,6 +62,10 @@ html {
                     border: 5px solid white;
                     height: 500px;
                     width: 500px;
+                }
+
+                hr {
+                    width: 100%;
                 }
             }
             
