added new enrollment into course functionality

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -51,6 +51,7 @@ html {
             display: flex;
             flex-direction: column;
             align-items: center;
+            margin-top: 20px;
             .user-info{
                 background-color: $charleston-green;
                 width: 50%;
