--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -27,7 +27,7 @@
             <hr>
 
             <div class="enrollmennt-wrapper">
-                <h2>Current Courses:</h2>
+                <h2 class="text-center">Current Courses:</h2>
 
                 <table style="width: 100%">
                     <tr>
@@ -53,8 +53,8 @@
                     <% end %>
                 </table>
 
-                <div class="small-action">
-                 <%= link_to 'Enroll', enrollments_path %>
+                <div class="small-action text-center">
+                 <%= link_to 'Enroll in Course', new_enrollment_path %>
                 </div>
             </div>
         </div>
