--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -1,4 +1,11 @@
 <div class="container-fluid">
+
+    <div class="options">
+        <div class="small-action"> 
+            <%= link_to 'Back to Courses', courses_path %> 
+        </div>
+    </div>
+
     <div class="edit-wrapper">
 
         <h1>Edit Course</h1>
