--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -7,6 +7,10 @@
         <div class="small-action">
             <%= link_to 'Edit Course', edit_course_path(@course) %> 
         </div>
+
+        <div class="small-action">
+            <%= link_to 'New Enrollment', new_enrollment_path %> 
+        </div>
 </div>
 <div class="show-wrapper">
     <div class="user-info">
@@ -33,6 +37,38 @@
                     data: { confirm: 'Are you sure?' } %></td> 
                 
             </tr>          
+        </tbody>
+
+        </table>
+        <hr>
+        <h2>Course Roster</h2>
+
+        <table>
+        <thead>
+        <tr class="table-header">
+            <th>Name</th>
+            <th>User Type</th>
+            <th>User Type</th>
+            <th>User Type</th>
+        </tr>
+        </thead>
+        <tbody>
+
+        <% @course.enrollments.each do |single_enrollment| %>
+            <tr>
+                <td> <%= single_enrollment.user.first_name %> </td>
+                <td> <%= single_enrollment.user.userable_type %> </td>
+
+               
+
+                
+                <td><%= link_to 'Edit', edit_course_path(@course) %></td>
+                <td><%= link_to 'Delete', course_path(@course),
+                method: :delete, remote:true,
+                data: { confirm: 'Are you sure?' } %></td> 
+                
+            </tr>    
+        <% end %>
         </tbody>
 
         </table>
