--- a/app/views/devise/nav/_session_menu.html.erb
+++ b/app/views/devise/nav/_session_menu.html.erb
@@ -1,9 +1,11 @@
-<% if user_signed_in? %>
+<div id="login-nav">
+  <% if user_signed_in? %>
+    
+    <%= link_to('Logout', destroy_user_session_path, method: :delete) %>        
+    
+  <% else %>
   
-  <%= link_to('Logout', destroy_user_session_path, method: :delete) %>        
-  
-<% else %>
- 
-  <%= link_to('Login', new_user_session_path)  %>  
+    <%= link_to('Login', new_user_session_path)  %>  
 
-<% end %>
+  <% end %>
+</div>
