--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -30,7 +30,7 @@
                 <%= p.text_field :email %>
             </div>
             <div class="form-group">
-                <label for="password">Pssword:</label>
+                <label for="password">Password:</label>
                 <%= p.text_field :password %>
             </div>
         <% end %>
