--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,58 +1,67 @@
 
-
 <div class="container-fluid">
 
-<div class="row">
-  <div class="col-sm-6">
-    <div class="action">
-      <%= link_to 'Students', students_path %>
+  <div class="row">
+    <div class="col-sm-6">
+
+      <div class="action">
+        <%= link_to 'Students', students_path %>
+      </div>
+
+    </div>
+
+    <div class="col-sm-6">
+
+      <div class="action">
+        <%= link_to 'Instructors', instructors_path %>
+      </div>
+
     </div>
   </div>
 
-  <div class="col-sm-6">
-    <div class="action">
-      <%= link_to 'Instructors', instructors_path %>
+  <div class="row">
+    <div class="col-sm-6">
+
+      <div class="action">
+        <%= link_to 'Courses', courses_path %>
+      </div>
     </div>
-  </div>
-</div>
 
-<div class="row">
-  <div class="col-sm-6">
-    <div class="action">
-      <%= link_to 'Courses', courses_path %>
+    <div class="col-sm-6">
+
+      <div class="action">
+        <%= link_to 'Enrollments', enrollments_path %>
     </div>
-  </div>
+  </div>   
 
-  <div class="col-sm-6">
-    <div class="action">
-      <%= link_to 'Enrollment', enrollments_path %>
-  </div>
-</div>   
 
-<h1>Users</h1>
-                <table style="width:80%">
-                        <tr>
-                            <th> User ID</th>
-                            <th> Name</th>
-                            <th> Email</th>
-                            <th> User Type</th>
-                            <th> Username</th>
-                            <th> Password</th>
-                            <th> House</th>
-                        </tr>
-                
-                <% @users.each do |single_user| %>
-                        <tr>
-                            <td> <%= single_user.id %> </td>
-                            <td>  <%= single_user.full_name %> </td>
-                            <td> <%= single_user.email %></td>
-                            <td> <%= single_user.userable_type %></td>
-                            <td> <%= single_user.username %> </td>
-                            <td> <%= single_user.password %> </td>
-                            <td> <%= single_user.house.name %> </td>
-                        </tr>
-                    <% end %>
-                </table>
+
+    <table style="width:80%">
+            <tr>
+                <th> User ID</th>
+                <th> Name</th>
+                <th> Email</th>
+                <th> User Type</th>
+                <th> Username</th>
+                <th> Password</th>
+                <th> House</th>
+            </tr>
+
+    <% @users.each do |single_user| %>
+            <tr>
+                <td> <%= single_user.id %> </td>
+                <td>  <%= single_user.full_name %> </td>
+                <td> <%= single_user.email %></td>
+                <td> <%= single_user.userable_type %></td>
+                <td> <%= single_user.username %> </td>
+                <td> <%= single_user.password %> </td>
+                <td> <%= single_user.house.name %> </td>
+            </tr>
+        <% end %>
+    </table>
+
+
+
               
                    
                 
