added media queries for dashboard actions

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,9 +60,12 @@
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
 
-                      <%= yield %>
+  <div class="container text-center">
 
-   
+    <%= yield %>
+
+  </div>   
+  
 </body>
 </html>
 
