--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,26 +26,34 @@ html {
         }
     }
 
-    #bootstrap-override .container-fluid{
+    #bootstrap-override .container{
 
-        
-        .action {
+        .action-wrapper{
             display: flex;
-            justify-content: center;
-            align-items: center;
+            flex-direction: row;
+            justify-content: space-around;
+
+            .action {
+            // display: flex;
+            // justify-content: center;
+            // align-items: center;
             background-color: $black-coral;
-            margin-top: 100px;
-            width: 50%;
-            height: 100px;
-            border: 2px solid $light-grey;
-            border-radius: 25px;
+            // margin-top: 100px;
+            width: 30%;
+            // height: 100px;
+            // border: 2px solid $light-grey;
+            // border-radius: 25px;
 
             a {
                 color: $light-grey;
-                font-size: 3rem;
+                // font-size: 3rem;
                 
             }
         }
+
+        }
+        
+        
 
         .show-wrapper{
             display: flex;
@@ -118,7 +126,20 @@ html {
     background-color: $charleston-green;
 }
 
-
+// Small devices (landscape phones, 576px and up)
+@include media-breakpoint-down(sm) {
+    html{
+        #bootstrap-override .container{
+            .action-wrapper{
+                .action{
+                    width: 50%;
+                }
+            }
+        }
+    }
+   
+  
+}
 
 
 // Sidebar
