--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,30 @@
 
-<div class="container-fluid">
+<div class="row action-wrapper">
 
-  <div class="row">
+
+    <h1 class="action border border-white rounded p-3 m-5">
+      <%= link_to 'Students', students_path %>
+    </h1>
+
+    <h1 class="action border border-white rounded p-3 m-5">
+      <%= link_to 'Instructors', instructors_path %>
+    </h1>
+
+    <h1 class="action border border-white rounded p-3 m-5">
+        <%= link_to 'Courses', courses_path %>
+    </h1>
+
+    <h1 class="action border border-white rounded p-3 m-5">
+        <%= link_to 'Enrollments', enrollments_path %>
+    </h1>
+
+</div>
+
+
+
+
+
+<div class="row">
     <div class="col-sm-6">
 
       <div class="action">
