--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,26 +34,28 @@ html {
             justify-content: space-around;
 
             .action {
-            // display: flex;
-            // justify-content: center;
-            // align-items: center;
-            background-color: $black-coral;
-            // margin-top: 100px;
-            width: 30%;
-            // height: 100px;
-            // border: 2px solid $light-grey;
-            // border-radius: 25px;
+                // display: flex;
+                // justify-content: center;
+                // align-items: center;
+                background-color: $black-coral;
+                // margin-top: 100px;
+                width: 30%;
+                // height: 100px;
+                // border: 2px solid $light-grey;
+                // border-radius: 25px;
 
-            a {
-                color: $light-grey;
-                // font-size: 3rem;
-                
+                a {
+                    color: $light-grey;
+                    
+                }
             }
-        }
 
         }
         
-        
+        .dashboard-table{
+            display: flex;
+            justify-content: center;
+        }
 
         .show-wrapper{
             display: flex;
