--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -20,44 +20,9 @@
 
 </div>
 
+  
 
-
-
-
-<div class="row">
-    <div class="col-sm-6">
-
-      <div class="action">
-        <%= link_to 'Students', students_path %>
-      </div>
-
-    </div>
-
-    <div class="col-sm-6">
-
-      <div class="action">
-        <%= link_to 'Instructors', instructors_path %>
-      </div>
-
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-sm-6">
-
-      <div class="action">
-        <%= link_to 'Courses', courses_path %>
-      </div>
-    </div>
-
-    <div class="col-sm-6">
-
-      <div class="action">
-        <%= link_to 'Enrollments', enrollments_path %>
-    </div>
-  </div>   
-
-
+<div class="dashboard-table">
 
     <table style="width:80%">
             <tr>
@@ -83,7 +48,7 @@
         <% end %>
     </table>
 
-
+<div>
 
               
                    
